# Envelope_Generator

./: CMakeLists.txt  license.txt  readme.md
src/: app_manager.cpp  app_manager.hpp  button.cpp  button.hpp  envelope_generator.cpp  envelope_generator.hpp  envelope_visualizer.cpp  envelope_visualizer.hpp  knob.cpp  knob.hpp  main.cpp  main_test_1.cpp  main_test_2.cpp  slider.cpp  slider.hpp  theme.cpp  theme.hpp
